tests/should-fail/flags/rb-annotation.j
//# +rb

function foo takes handle h returns integer
	return h
	return 0
endfunction